Update
Ajout balise authorize dans Swagger
